--- a/src/constants.styl
+++ b/src/constants.styl
@@ -1,11 +1,11 @@
-$blue=#3CAED6
 $darkBlue=#289CC7
 
-$darkGrey=#818181
+$darkGrey=#363636
 $grey=#cecece
 $grey100=#d3d3d3
-$lightGrey=#e6e6e6
-
+$lightGrey=#dbdbdb
+$sand=#A18A60
+$green=#29c961
 $white=#fff
 
 $black=#303741
